[gd_scene load_steps=35 format=2]

[ext_resource path="res://Textures/eyeframes.png" type="Texture" id=1]
[ext_resource path="res://Textures/eyeframes_2.png" type="Texture" id=2]
[ext_resource path="res://Shaders/Shadow.shader" type="Shader" id=3]
[ext_resource path="res://Textures/ground.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Character.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/StageFinal.gd" type="Script" id=6]
[ext_resource path="res://Textures/fog.png" type="Texture" id=7]
[ext_resource path="res://Scenes/MecanismPurple.tscn" type="PackedScene" id=8]
[ext_resource path="res://Textures/eyeball-3.png" type="Texture" id=9]
[ext_resource path="res://Scenes/door.tscn" type="PackedScene" id=10]
[ext_resource path="res://Textures/background.png" type="Texture" id=11]
[ext_resource path="res://Textures/eyeball-9.png" type="Texture" id=12]
[ext_resource path="res://Textures/eyeball-8.png" type="Texture" id=13]
[ext_resource path="res://Textures/eyeball-5.png" type="Texture" id=14]
[ext_resource path="res://Textures/eyeball-6.png" type="Texture" id=15]
[ext_resource path="res://Textures/eyeball-10.png" type="Texture" id=16]
[ext_resource path="res://Textures/eyeball-4.png" type="Texture" id=17]
[ext_resource path="res://Textures/eyeball-7.png" type="Texture" id=18]
[ext_resource path="res://Scenes/ButtonClick.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/EyeballPickupPurple.tscn" type="PackedScene" id=20]
[ext_resource path="res://sounds/crow.wav" type="AudioStream" id=21]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 128 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "before",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "after",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "shutup",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 548.216, 10 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 45.7739, 32.1107 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 61.7156, 41.3112 )

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 3 )
shader_param/color = Plane( 0, 0, 0, 1 )
shader_param/reduction = Plane( 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 29.3971, 177.167 )

[node name="StageFinal" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Background"]
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="Background"]
position = Vector2( -640, 0 )
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="Background"]
position = Vector2( 640, 0 )
texture = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 450.205, 54.2703 )
texture = ExtResource( 7 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="Before" type="Node2D" parent="."]

[node name="Door" parent="Before" instance=ExtResource( 10 )]
position = Vector2( 260.209, 57.1052 )

[node name="Mecanisme" parent="Before" instance=ExtResource( 8 )]
position = Vector2( 184, 36.75 )
color = "purple"

[node name="Eyeball" parent="Before" instance=ExtResource( 20 )]
position = Vector2( -428.404, 79.6132 )

[node name="Eyeball2" parent="Before" instance=ExtResource( 20 )]
position = Vector2( -300, 79 )

[node name="Sprite" type="AnimatedSprite" parent="Before"]
material = SubResource( 1 )
position = Vector2( -335, 5 )
frames = SubResource( 5 )
animation = "before"

[node name="Sprite" type="Sprite" parent="Before/Sprite"]
modulate = Color( 0.929412, 0.0901961, 0.0901961, 0.443137 )
material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Before/Sprite"]
stream = ExtResource( 21 )

[node name="Eyeball_0" type="Sprite" parent="Before"]
material = SubResource( 7 )
position = Vector2( -160, 28 )
texture = ExtResource( 16 )

[node name="Area2D" parent="Before/Eyeball_0" instance=ExtResource( 19 )]
position = Vector2( 0, 25 )

[node name="Eyeball_45" type="Sprite" parent="Before"]
material = SubResource( 7 )
position = Vector2( -120, 28 )
texture = ExtResource( 9 )

[node name="Area2D" parent="Before/Eyeball_45" instance=ExtResource( 19 )]
position = Vector2( 0, 25 )
value = 45

[node name="Eyeball_90" type="Sprite" parent="Before"]
material = SubResource( 7 )
position = Vector2( -80, 28 )
texture = ExtResource( 12 )

[node name="Area2D" parent="Before/Eyeball_90" instance=ExtResource( 19 )]
position = Vector2( 0, 25 )
value = 90

[node name="Eyeball_135" type="Sprite" parent="Before"]
material = SubResource( 7 )
position = Vector2( -40, 28 )
texture = ExtResource( 17 )

[node name="Area2D" parent="Before/Eyeball_135" instance=ExtResource( 19 )]
position = Vector2( 0, 25 )
value = 135

[node name="Eyeball_180" type="Sprite" parent="Before"]
material = SubResource( 7 )
position = Vector2( 0, 28 )
texture = ExtResource( 13 )

[node name="Area2D" parent="Before/Eyeball_180" instance=ExtResource( 19 )]
position = Vector2( 0, 25 )
value = 180

[node name="Eyeball_225" type="Sprite" parent="Before"]
material = SubResource( 7 )
position = Vector2( 40, 28 )
texture = ExtResource( 14 )

[node name="Area2D" parent="Before/Eyeball_225" instance=ExtResource( 19 )]
position = Vector2( 0, 25 )
value = 225

[node name="Eyeball_270" type="Sprite" parent="Before"]
material = SubResource( 7 )
position = Vector2( 80, 28 )
texture = ExtResource( 18 )

[node name="Area2D" parent="Before/Eyeball_270" instance=ExtResource( 19 )]
position = Vector2( 0, 25 )
value = 270

[node name="Eyeball_315" type="Sprite" parent="Before"]
material = SubResource( 7 )
position = Vector2( 120, 28 )
texture = ExtResource( 15 )

[node name="Area2D" parent="Before/Eyeball_315" instance=ExtResource( 19 )]
position = Vector2( 0, 25 )
value = 315

[node name="Node2D" parent="." instance=ExtResource( 5 )]
position = Vector2( -501, 57 )

[node name="Camera2D" type="Camera2D" parent="Node2D"]
current = true
smoothing_speed = 10.0

[node name="After" type="Node2D" parent="."]

[node name="Sprite3" type="Sprite" parent="After"]
material = SubResource( 8 )
position = Vector2( -761, 44 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 500, 1000 )

[node name="Sprite2" type="Sprite" parent="After"]
material = SubResource( 8 )
position = Vector2( 67, 183 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 2000, 200 )

[node name="StaticBody2D" type="StaticBody2D" parent="After"]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="After/StaticBody2D"]
position = Vector2( -130.479, 93.7935 )
shape = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="After/StaticBody2D"]
position = Vector2( -575.193, 4.97942 )
shape = SubResource( 10 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="After/StaticBody2D"]
position = Vector2( -574.94, 80.3576 )
shape = SubResource( 11 )

[node name="StaticBody2D3" type="StaticBody2D" parent="After"]
position = Vector2( 217.205, 31.3157 )
__meta__ = {
"_edit_group_": true
}

[node name="ground" type="Sprite" parent="After/StaticBody2D3"]
modulate = Color( 0.266667, 0.180392, 0.180392, 1 )
material = SubResource( 12 )
position = Vector2( 0, -169 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 500, 168 )

[node name="StaticBody2D" type="CollisionShape2D" parent="After/StaticBody2D3"]
position = Vector2( 29.9292, -183.577 )
shape = SubResource( 13 )

[connection signal="leave" from="Before/Door" to="." method="_on_Door_leave"]
[connection signal="activate" from="Before/Mecanisme" to="." method="_on_Mecanisme_activate"]
[connection signal="activate" from="Before/Eyeball_0/Area2D" to="." method="_on_Area2D_activate"]
[connection signal="activate" from="Before/Eyeball_45/Area2D" to="." method="_on_Area2D_activate"]
[connection signal="activate" from="Before/Eyeball_90/Area2D" to="." method="_on_Area2D_activate"]
[connection signal="activate" from="Before/Eyeball_135/Area2D" to="." method="_on_Area2D_activate"]
[connection signal="activate" from="Before/Eyeball_180/Area2D" to="." method="_on_Area2D_activate"]
[connection signal="activate" from="Before/Eyeball_225/Area2D" to="." method="_on_Area2D_activate"]
[connection signal="activate" from="Before/Eyeball_270/Area2D" to="." method="_on_Area2D_activate"]
[connection signal="activate" from="Before/Eyeball_315/Area2D" to="." method="_on_Area2D_activate"]
